--- a/style.css
+++ b/style.css
@@ -12,7 +12,16 @@ body {
     height: 100%;
     width: 100%;
 }
-
+#crsr{
+    height: 2.8vw;
+    width: 2.8vw;
+    border: 1px solid rgba(245, 245, 245, 0.818);
+    border-radius: 50%;
+    position: fixed;
+    z-index: 9999;
+    mix-blend-mode: difference;
+    transform: translate(-50%,-50%);
+}
 #loader {
     height: 100%;
     width: 100%;
@@ -62,7 +71,7 @@ body {
     text-transform: uppercase;
     font-weight: 900;
     opacity: 0;
-    animation-duration: 2s;
+    animation-duration: 2.5s;
     animation-iteration-count: infinite;
 }
 
@@ -106,7 +115,39 @@ body {
 }
 
 #page1 {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: #151515;
+}
+
+#page1 #nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 7vh 8vw;
+}
+
+#nav-part2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+}
+
+#nav-part2 h4 {
+    font-weight: 500;
+
+}
+.hero{
+    margin-left: 26%;
+    width: 74%;
+}
+.hero:nth-child(2){
+    margin-top: 14.9vh;
+}
+.hero h1{
+    font-size: 7.5vw;
+    line-height: 7.4vw;
+    text-transform: uppercase;
+    font-weight: 600;
 }
