--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     padding: 0%;
     box-sizing: border-box;
     color: white;
-    /* font-family: 'gilroy'; */
     font-family: "Plain Light";
+    scroll-behavior: smooth;
 }
 
 html,
@@ -12,7 +12,13 @@ body {
     height: 100%;
     width: 100%;
 }
-#crsr{
+
+body {
+    overflow-x: hidden;
+    background: #151515;
+}
+
+#crsr {
     height: 2.8vw;
     width: 2.8vw;
     border: 1px solid rgba(245, 245, 245, 0.818);
@@ -20,8 +26,9 @@ body {
     position: fixed;
     z-index: 9999;
     mix-blend-mode: difference;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
+
 #loader {
     height: 100%;
     width: 100%;
@@ -116,8 +123,7 @@ body {
 
 #page1 {
     min-height: 100vh;
-    width: 100vw;
-    background-color: #151515;
+    width: 100%;
 }
 
 #page1 #nav {
@@ -138,16 +144,327 @@ body {
     font-weight: 500;
 
 }
-.hero{
-    margin-left: 26%;
-    width: 74%;
+
+.hero {
+    margin-left: 27%;
+    width: 73%;
+    height: fit-content;
+    overflow-y: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 999;
 }
-.hero:nth-child(2){
-    margin-top: 14.9vh;
+
+.hero:nth-child(2) {
+    margin-top: 10vh;
 }
-.hero h1{
-    font-size: 7.5vw;
+
+.hero h1 {
+    font-size: 7.2vw;
     line-height: 7.4vw;
     text-transform: uppercase;
     font-weight: 600;
+    position: relative;
+}
+
+/* #hero-1::before {
+    content: "01";
+    font-size: 3.2vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left:-1%;
+    position: absolute;
+    top: -5%;
+} */
+
+.hero h2 {
+    font-size: 7.2vw;
+    line-height: 7.4vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-bottom: 0.5vw solid white;
+    padding-bottom: 0.8vw;
+}
+
+.hero h2:hover {
+    -webkit-text-stroke: 2px #fff;
+    color: transparent;
+    font-weight: 500;
+    border-bottom: 0.5vw solid rgba(255, 255, 255, 0);
+}
+
+#page2 {
+    height: 100vh;
+    width: 100%;
+    padding-top: 17vh;
+    position: relative;
+}
+
+#video-container {
+    height: 65vh;
+    width: 71vw;
+    left: 28%;
+    position: relative;
+    background-image: url(/img/Showreel-2022-preview-1.jpg);
+}
+
+#video-container img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    top: 0;
+}
+
+#video-container video {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    opacity: 0;
+}
+
+#video-cursor {
+    height: 10vw;
+    width: 10vw;
+    border-radius: 50%;
+    background-color: #FFA63D;
+    position: absolute;
+    top: -10%;
+    left: 80%;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#video-cursor i {
+
+    font-size: 2.5vw;
+}
+
+#page3 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: gray;
+}
+
+#page4 {
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+    padding: 7vh 0;
+}
+
+#page4-content {
+    width: 72vw;
+    position: relative;
+    margin-left: 28%;
+}
+
+#page4-content h1 {
+    font-size: 7vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    position: relative;
+}
+
+#page4-content h1::before {
+    content: "03";
+    position: absolute;
+    font-size: 3.2vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -13%;
+    top: 11%;
+}
+
+#page4-content .underline {
+    height: 1px;
+    width: 100%;
+    background-color: #fff;
+    margin: 5vw 0;
+}
+
+#page4-content>p {
+    font-size: 2.2vw;
+    width: 49%;
+    margin-bottom: 4vw;
+}
+
+#page4-flex {
+    display: flex;
+}
+
+#page4-flex img {
+    width: 45%;
+}
+
+#page4-flex p {
+    font-size: 1vw;
+    line-height: 1.5vw;
+    width: 21%;
+    margin-left: 1.2vw;
+}
+
+#page4-blue-div {
+    background-color: #3F7DF4;
+    width: 34vw;
+    padding: 2vw;
+    position: relative;
+    margin-top: -32vh;
+    margin-left: 22vw;
+}
+
+.blue-div-elem {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 2vw 0;
+    border-bottom: 1px solid #ffffffaa;
+}
+
+.blue-div-elem h4 {
+    font-size: 2vw;
+    font-weight: 500;
+}
+
+.blue-div-elem p {
+    width: 40%;
+    font-size: 0.7vw;
+    font-size: 1vw;
+}
+
+#page5 {
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.elem {
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin-bottom: -2vw;
+}
+
+.elem h1 {
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: transparent;
+    display: inline-block;
+    margin-right: 16px;
+    animation-name: elem;
+    animation-duration: 20s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.elem h1 span {
+    font-family: fantasy;
+}
+
+@keyframes elem {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(calc(-100% - 20px));
+    }
+}
+
+
+.elem2 {
+    white-space: nowrap;
+    overflow-x: hidden;
+    margin-bottom: -2vw;
+}
+
+.elem2 h1 {
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: transparent;
+    display: inline-block;
+    transform: translateX(calc(-100%-20px));
+    margin-right: 16px;
+    animation-name: elem;
+    animation-duration: 20s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+}
+
+.elem h1 span {
+    font-style: italic;
+    color: transparent;
+    font-family: "silk serif";
+}
+
+.elem2 h1 span {
+    font-style: italic;
+    color: transparent;
+    font-family: "silk serif";
+}
+
+#footer {
+    height: 100vh;
+    width: 100%;
+    padding-left: 28vw;
+}
+
+#footer>h1 {
+    font-size: 7vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    position: relative;
+}
+
+#footer h1::before {
+    content: "04";
+    position: absolute;
+    font-size: 3.2vw;
+    font-weight: 100;
+    font-family: "silk serif";
+    left: -13%;
+    top: 11%;
+}
+
+.underline {
+    height: 2px;
+    width: 100%;
+    margin: 2vw 0;
+    background-color: #fff;
+}
+
+#footer-div {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 15vw;
+    padding-top: 4vw;
+    margin-bottom: 5vw;
+}
+
+#footer-div .box {
+    width: 20%;
+
+}
+
+.box h6 {
+    font-size: 0.9vw;
+    font-weight: 600;
+
+}
+
+.box h5 {
+    font-size: 1.4vw;
+    font-weight: 500;
+}
+
+#footer>h5 {
+    font-size: 1.1vw;
+    font-weight: 500;
 }
